--- a/index.html
+++ b/index.html
@@ -198,7 +198,7 @@ Esta campaña se suma a otras acciones que la AABE ya venía realizando en esta 
     <br>
     <button class="w3-button w3-green" onclick="moves()">Haz Click</button> 
     
-    <p style="background:#b3cbc3;">Operario</p>
+    <p style="background:#b3cbc3;">Diseño</p>
     <div class="w3-light-grey">
       <div id="myBir" class="w3-container w3-blue w3-center" style="width:15%">20%</div>
     </div>
@@ -365,8 +365,8 @@ function w3_close() {
       function frame() {
         if (width >= 60) {
           clearInterval(id);
-          alert("Haz echo Click , Bueno en esta area soy novato pero me estoy capacitando sigue por favor !!")
-          alert("Puedes Descargar mi curriculum vitae dandole click en descargar cv  !!!")
+          alert("Haz echo Click , sigue por favor !!")
+          alert("Por motivos de seguridad no podras descargar mi cv  !!!")
         } else {
           width++; 
           elem.style.width = width + '%'; 
